# openAI-chatbot

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: dev_bld-chatbot-demo.yml  dev_bld-chatbot.yml
auth/: views.py
chatbot/: settings.py  urls.py
chatmessages/: admin.py  apps.py  urls.py  views.py
chatmessages/migrations/: 0001_initial.py
templates/messages/: chat-view.html
